fix alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -106,12 +106,12 @@ footer{
 	text-align: center;
 }
 .align-text{
-	display:inline-block;
+	/*display:inline-block;*/
 	align: center;
 	vertical-align: middle;
 }
 .align-img{
-	display:inline-block;
+	/*display:inline-block;*/
 	vertical-align: middle;
 }
 .flex-container{
